--- a/examples/mario/pom.xml
+++ b/examples/mario/pom.xml
@@ -7,7 +7,7 @@
     <name>ICGE Example: Mario Simulator</name>
     <properties>
         <java.version>11</java.version>
-        <icge.version>2.4.0</icge.version>
+        <icge.version>2.4.1-Snapshot</icge.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
