--- a/.github/workflows/releaseMavenPackages.yml
+++ b/.github/workflows/releaseMavenPackages.yml
@@ -17,6 +17,6 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Release
-      run: mvn -B deploy
+      run: mvn -s ${{ github.workspace }}/settings.xml -B deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
