--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,16 @@
         </dependencies>
     </dependencyManagement>
     <distributionManagement>
-      <repository>
-        <id>github</id>
-        <name>GitHub Packages</name>
-        <url>https://maven.pkg.github.com/neumantm/ICGE2</url>
-      </repository>
+        <repository>
+            <id>c-hack.icge-release</id>
+            <name>C-Hack ICGE-Release Repo</name>
+            <url>https://maven.c-hack.de/repository/icge-release/</url>
+        </repository>
+        <snapshotRepository>
+            <id>c-hack.snapshot</id>
+            <name>C-Hack Repositroy Snapshot</name>
+            <url>https://maven.c-hack.de/repository/snapshot/</url>
+        </snapshotRepository>
     </distributionManagement>
     <modules>
         <module>ICGE-Ui</module>
